Preventing word wrap on textbox- work in progress

--- a/frontend/src/components/in-play/in-play.styles.scss
+++ b/frontend/src/components/in-play/in-play.styles.scss
@@ -29,6 +29,10 @@
       width: max-content;
       white-space: pre;
     }
+    .line {
+      display: flex;
+      flex-direction: row;
+    }
   }
 }
 
